<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".Profile">

    <TextView
        android:id="@+id/profile_txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="{ USERNAME }"
        android:textColor="@color/cywalkRed"
        android:layout_marginTop="25dp"
        android:textSize="30dp">
    </TextView>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_img_avatar"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/profile_btn_edit_avatar"
        android:layout_marginTop="25dp"
        android:scaleType="fitCenter"
        android:src="@drawable/default_avatar"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.CircularBorder"
        app:strokeColor="@color/bronze"
        app:strokeWidth="15dp"
        android:padding="15dp">
    </com.google.android.material.imageview.ShapeableImageView>

    <Button
        android:id="@+id/profile_btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/cywalkRed"
        android:layout_toEndOf="@+id/profile_img_avatar"
        android:layout_margin="15dp"
        android:text="Log Out" />

    <Button
        android:id="@+id/profile_btn_edit_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/cywalkRed"
        android:layout_below="@+id/profile_txt_username"
        android:layout_marginTop="50dp"
        android:text="Change Profile Picture" />

    <TextView
        android:id="@+id/tv_achievements"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_below="@id/profile_img_avatar"
        android:background="@color/white"
        android:layout_margin="5dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/cywalkRed"
        android:text="Achievements:\n"
        >
    </TextView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        app:itemIconTint="@color/cywalkRed"
        app:itemBackground="@color/white"
        app:itemIconSize="50dp"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />



</RelativeLayout>