<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:background="@color/cywalkRed"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:text="Dev Login"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/errorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20dp"
        android:layout_gravity="center"
        android:padding="20dp"
        android:textColor="@color/cywalkRed">
    </TextView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:paddingTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="username: "
            android:textSize="20dp"
            android:textColor="#000000">
        </TextView>

        <EditText
            android:id="@+id/login_username_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:hint="Username"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="password: "
            android:textSize="20dp"
            android:textColor="#000000">
        </TextView>

        <EditText
            android:id="@+id/login_password_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Password"
            android:textColor="@color/black"
            android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="Login"
            android:textSize="20sp"
            android:textColor="#ffffff">
        </Button>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/switchOrgView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="organization sign-up/log-in"
            android:textColor="#AAAAAA"
            android:layout_centerInParent="true"
            android:layout_marginTop="150dp"/>

    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>