<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:title=""
        android:icon="@drawable/ic_dashboard_foreground" />

    <item
        android:id="@+id/nav_goals"
        android:title=""
        android:icon="@drawable/ic_goals_foreground"/>

    <item
        android:id="@+id/nav_social"
        android:title=""
        android:icon="@drawable/ic_social_foreground"/>


    <item
        android:id="@+id/nav_profile"
        android:title=""
        android:icon="@drawable/ic_profile_foreground"/>

</menu>